# stubbsplugs

./: .gitignore  Install NeonForge.command  README.md  README.txt
.github/workflows/: build-mac.yml
au/: CMakeLists.txt
au/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Profile.cpp  Profile.h
profiles/: Dubstep-Drums.neon  eq.json
python/: clone.py  dut.py  dynamics.py  profiler.py  sweep.py  validate.py
showcase/: index.html
